Fix badge height for one-way trips. Make filterselection hidden via css to prevent page flicker.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,6 +345,7 @@ ul.tabs li a.active {
 .spinner {
 	color: #045596;
 	padding-right: 2em;
+	display: none;
 }
 
 .noFlightsFound {
